--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "react": "16.2.0",
     "react-native": "0.52.0",
-    "react-native-smart-splash-screen": "^2.3.5"
+    "react-native-smart-splash-screen": "^2.3.5",
     "react-navigation": "^1.0.0-beta.26"
   },
   "devDependencies": {
