config ESLint rename folder: app to src

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,5 @@
 {
-    "extends": "rallycoding"
+  "parser": "babel-eslint",
+  "extends": "airbnb",
+  "plugins": ["react", "jsx-a11y", "import"]
 }
