--- a/package.json
+++ b/package.json
@@ -13,10 +13,16 @@
     "react-navigation": "^1.0.0-beta.26"
   },
   "devDependencies": {
+    "babel-eslint": "^8.2.1",
     "babel-jest": "22.1.0",
     "babel-preset-react-native": "4.0.0",
-    "eslint-config-rallycoding": "^3.2.0",
+    "eslint": "^4.15.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.5.1",
     "jest": "22.1.1",
+    "prettier-eslint": "^8.7.5",
     "react-test-renderer": "16.2.0"
   },
   "jest": {
