add viewpager as GetStarted screen

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-native": "0.52.0",
     "react-native-smart-splash-screen": "^2.3.5",
     "react-native-vector-icons": "^4.5.0",
-    "react-navigation": "^1.0.0-beta.26"
+    "react-navigation": "^1.0.0-beta.26",
+    "rn-viewpager": "^1.2.9"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
