--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -138,9 +138,10 @@ android {
 
 dependencies {
     compile fileTree(dir: "libs", include: ["*.jar"])
-    compile "com.android.support:appcompat-v7:23.0.1"
+    compile "com.android.support:appcompat-v7:26.0.2"
     compile "com.facebook.react:react-native:+"  // From node_modules
     compile project(':react-native-smart-splashscreen')
+    compile project(':realm')
 }
 
 // Run this once to be able to run the application with BUCK
