Integrate web project

--- a/package.json
+++ b/package.json
@@ -3,30 +3,69 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "jest",
+    "start": "webpack-dev-server --content-base web/public/ --config web/webpack/web.dev.config.js --port 3001 --inline --hot --colors",
+    "web-bundle": "webpack --config web/webpack/web.prod.config.js --progress --colors",
+    "clear-cache": "gulp clear-cache"
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "babel": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
+    "clone": "^2.1.1",
+    "morgan": "^1.9.0",
+    "object-assign": "^4.1.1",
+    "prop-types": "^15.6.0",
     "react": "16.2.0",
+    "react-dom": "^16.2.0",
     "react-native": "0.52.0",
     "react-native-smart-splash-screen": "^2.3.5",
     "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^1.0.0-beta.26",
-    "rn-viewpager": "^1.2.9"
+    "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
+    "redux-thunk": "^2.2.0",
+    "rn-viewpager": "^1.2.9",
+    "superagent": "^3.8.2"
   },
   "devDependencies": {
+    "autoprefixer": "^7.2.5",
+    "autoprefixer-loader": "^3.2.0",
+    "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.1",
     "babel-jest": "22.1.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-react-transform": "^3.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-react-native": "4.0.0",
+    "css-loader": "^0.28.9",
     "eslint": "^4.15.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.5.1",
+    "gulp": "^3.9.1",
     "jest": "22.1.1",
+    "json-loader": "^0.5.7",
+    "less": "^2.7.3",
+    "less-loader": "^4.0.5",
     "prettier-eslint": "^8.7.5",
-    "react-test-renderer": "16.2.0"
+    "react-native-cli": "^2.0.1",
+    "react-test-renderer": "16.2.0",
+    "react-transform-catch-errors": "^1.0.2",
+    "react-transform-hmr": "^1.0.4",
+    "redbox-react": "^1.5.0",
+    "redux": "^3.7.2",
+    "redux-devtools": "^3.4.1",
+    "redux-devtools-dock-monitor": "^1.1.3",
+    "redux-devtools-log-monitor": "^1.4.0",
+    "redux-logger": "^3.0.6",
+    "style-loader": "^0.19.1",
+    "webpack": "^3.10.0",
+    "webpack-dev-middleware": "^2.0.4",
+    "webpack-dev-server": "^2.11.1",
+    "webpack-hot-middleware": "^2.21.0"
   },
   "jest": {
     "preset": "react-native"
