--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "axios": "^0.17.1",
     "babel": "^6.23.0",
     "babel-polyfill": "^6.26.0",
+    "jquery": "^1.9.1",
+    "popper.js": "^1.12.9",
     "prop-types": "^15.6.0",
     "react": "16.2.0",
+    "react-bootstrap": "^0.32.0",
     "react-dom": "^16.2.0",
     "react-native": "0.52.0",
     "react-native-smart-splash-screen": "^2.3.5",
