--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-router": "^4.2.0",
     "redux-thunk": "^2.2.0",
     "rn-viewpager": "^1.2.9",
-    "superagent": "^3.8.2"
+    "superagent": "^3.8.2",
+    "youtube-api-search": "0.0.5"
   },
   "devDependencies": {
     "autoprefixer": "^7.2.5",
