Integrate Login with HOC

--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "babel": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "jquery": "^1.9.1",
+    "native-base": "^2.3.7",
     "popper.js": "^1.12.9",
     "prop-types": "^15.6.0",
     "react": "16.2.0",
     "react-bootstrap": "^0.32.0",
     "react-dom": "^16.2.0",
     "react-native": "0.52.0",
+    "react-native-check-box": "^2.0.2",
+    "react-native-material-textfield": "^0.12.0",
     "react-native-smart-splash-screen": "^2.3.5",
     "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^1.0.0-beta.26",
