--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^16.2.0",
     "react-native": "0.52.0",
     "react-native-check-box": "^2.0.2",
+    "react-native-elements": "^0.19.1",
     "react-native-loading-spinner-overlay": "^0.5.2",
     "react-native-material-textfield": "^0.12.0",
     "react-native-smart-splash-screen": "^2.3.5",
